<resources>
    <plurals name="posts">
        <item quantity="one">%d post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="reply">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <plurals name="image">
        <item quantity="one">%d image</item>
        <item quantity="other">%d images</item>
    </plurals>
    <plurals name="board">
        <item quantity="one">%d board</item>
        <item quantity="other">%d boards</item>
    </plurals>
    <plurals name="bookmark">
        <item quantity="one">%d bookmark</item>
        <item quantity="other">%d bookmarks</item>
    </plurals>
    <plurals name="filter">
        <item quantity="one">%d filter</item>
        <item quantity="other">%d filters</item>
    </plurals>
    <plurals name="site">
        <item quantity="one">%d site</item>
        <item quantity="other">%d sites</item>
    </plurals>
    <plurals name="thread_new_posts">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <plurals name="post_hidden">
        <item quantity="one">%1$d post hidden</item>
        <item quantity="other">%1$d posts hidden</item>
    </plurals>
    <plurals name="post_removed">
        <item quantity="one">%1$d post removed</item>
        <item quantity="other">%1$d posts removed</item>
    </plurals>
    <plurals name="watch_title">
        <item quantity="one">Watching one thread</item>
        <item quantity="other">Watching %d threads</item>
    </plurals>
    <plurals name="download_title">
        <item quantity="one">Downloading one thread</item>
        <item quantity="other">Downloading %d threads</item>
    </plurals>
    <plurals name="watch_new_quotes">
        <item quantity="one">%d new post quoting you</item>
        <item quantity="other">%d new posts quoting you</item>
    </plurals>
    <plurals name="watch_new_quoting">
        <item quantity="one">%1$d new post, %2$d quoting you</item>
        <item quantity="other">%1$d new posts, %2$d quoting you</item>
    </plurals>
    <string-array name="setting_watch_sounds">
        <item>All posts</item>
        <item>Only posts quoting you</item>
    </string-array>
    <string name="empty" />
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="continue_text">Continue</string>
    <string name="create">Create</string>
    <string name="do_not">Do not</string>
    <string name="move">Move</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="mark_as_my_post">Mark as my post</string>
    <string name="unmark_as_my_post">Unmark as my post</string>
    <string name="permission_app_settings">App settings</string>
    <string name="permission_grant">Grant</string>
    <string name="update_later">Later</string>
    <string name="update_none">Already on the latest %1$s version.</string>
    <string name="update_check_failed">Failed to check for updates.</string>
    <string name="update_install">Install</string>
    <string name="update_install_downloading">Downloading update…</string>
    <string name="update_install_download_failed">Download failed</string>
    <string name="update_install_download_failed_description">Reason: %1$s</string>
    <string name="update_retry_title">Retry update</string>
    <string name="update_retry">%1$s was not updated yet. Tap \"retry\" to retry the install.</string>
    <string name="update_retry_button">Retry</string>
    <string name="update_storage_permission_required_title">Storage permission required</string>
    <string name="update_storage_permission_required">
"Permission to access storage is required for installing the update.

Re-enable this permission in the app settings if you permanently disabled it."</string>
    <string name="minutes">%d minutes</string>
    <string name="card_stats">%1$dR %2$dI</string>
    <string name="action_reload">Reload</string>
    <string name="action_pin">Bookmark</string>
    <string name="action_open_browser">Open in a browser</string>
    <string name="action_share">Share</string>
    <string name="action_download_album">Download album</string>
    <string name="action_transparency_toggle">Toggle opacity</string>
    <string name="action_search">Search</string>
    <string name="action_search_image">Image search</string>
    <string name="action_switch_catalog">Catalog mode</string>
    <string name="action_switch_board">Board mode</string>
    <string name="action_scroll_to_top">Top</string>
    <string name="action_scroll_to_bottom">Bottom</string>
    <string name="action_sort">Sort</string>
    <string name="action_rename_pin">Rename bookmark</string>
    <string name="action_rename">Rename</string>
    <string name="action_reply">Reply</string>
    <string name="open_link_not_matched">%1$s cannot open this link; it will open in your browser instead.</string>
    <string name="order_bump">Bump order</string>
    <string name="order_reply">Reply count</string>
    <string name="order_image">Image count</string>
    <string name="order_newest">Newest</string>
    <string name="order_oldest">Oldest</string>
    <string name="order_modified">Latest reply</string>
    <string name="order_activity">Thread activity</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Found %1$s for \"%2$s\"</string>
    <string name="search_empty">Search subjects, comments, names, and filenames</string>
    <string name="open_link_confirmation">Open this link?</string>
    <string name="open_thread_confirmation">Open this thread?</string>
    <string name="open_link_failed">No applications were found to open this link</string>
    <string name="open_file_picker_failed">No file picker applications were found</string>
    <string name="image_pick_delegate_select_file_picker">Select a file picker to open a file…</string>
    <string name="action_confirm_exit">Press back twice quickly to exit</string>
    <string name="thumbnail_load_failed_network">Error</string>
    <string name="image_preview_failed">Failed to show image</string>
    <string name="image_preview_failed_oom">Failed to show image (out of memory)</string>
    <string name="image_failed_big_image">Failed to show image (deep-zoom loading failed)</string>
    <string name="image_not_found">Image not found</string>
    <string name="image_spoiler_filename">Spoilered file</string>
    <string name="image_hidden_filename">Hidden file</string>
    <string name="thread_boards_search_hint">Search</string>
    <string name="thread_load_failed_ssl">HTTPS error</string>
    <string name="thread_load_failed_network">Network error</string>
    <string name="thread_load_failed_parsing">API parse error</string>
    <string name="thread_load_failed_server">Server error</string>
    <string name="thread_load_failed_not_found">404 not found</string>
    <string name="thread_refresh_bar_inactive">Tap to refresh</string>
    <string name="thread_refresh_now">Loading…</string>
    <string name="thread_refresh_countdown">Loading in %1$ds</string>
    <string name="thread_load_failed_retry">Retry</string>
    <string name="thread_archived">Archived</string>
    <string name="thread_closed">Closed</string>
    <string name="thread_page_no">Page</string>
    <string name="thread_new_posts_goto">View</string>
    <string name="thread_empty_select">Please select a thread</string>
    <string name="thread_up_down_hint">Scroll to top/bottom</string>
    <string name="thread_pin_hint">Bookmark this thread</string>
    <string name="thread_save_hint">Save this thread as a local copy</string>
    <string name="thread_view_archive">Archive</string>
    <string name="thread_show_archives">Archives</string>
    <string name="thread_empty_setup_title">Nothing to show</string>
    <string name="thread_empty_setup_body">Add a site to begin browsing</string>
    <string name="thread_empty_setup_hint">Add a site here</string>
    <string name="setup_sites_title">Set up sites</string>
    <string name="setup_sites_empty">No sites added</string>
    <string name="setup_sites_add_hint">Add a site here</string>
    <string name="setup_sites_add_title">Add a site by its URL or name</string>
    <string name="setup_sites_site_description">%s added</string>
    <string name="setup_sites_add_boards_hint">Tap to add boards</string>
    <string name="setup_site_title">Configure %s</string>
    <string name="setup_site_group_general">General</string>
    <string name="setup_site_boards">Set up boards</string>
    <string name="setup_site_boards_description">%s added</string>
    <string name="setup_site_group_login">Authentication</string>
    <string name="setup_site_login">Login</string>
    <string name="setup_site_login_description_enabled">Logged in</string>
    <string name="setup_site_login_description_disabled">Off</string>
    <string name="setup_board_title">Configure boards of %s</string>
    <string name="setup_board_empty">No boards added</string>
    <string name="setup_board_removed">Removed \"%s\"</string>
    <string name="setup_board_added">%s added</string>
    <string name="filter_summary_all_boards">All boards</string>
    <string name="filter_enabled">Enabled</string>
    <string name="filter_filter">Filter</string>
    <string name="filter_action">Action</string>
    <string name="filter_pattern">Pattern</string>
    <string name="filter_match_test">Test the pattern</string>
    <string name="filter_boards">Boards</string>
    <string name="filter_types">Types</string>
    <string name="filter_all">All</string>
    <string name="filter_preview">Test your filter</string>
    <string name="setting_pass_token">Token</string>
    <string name="setting_pass_pin">PIN</string>
    <string name="setting_pass_authenticated">Device authorized!</string>
    <string name="setting_pass_bottom_description">"
<![CDATA[
Forgot your 4chan Pass login details?<br>
<a href=\"https://www.4chan.org/pass?reset\">Go here to reset your PIN.</a><br>
<br>
Don't have a 4chan Pass?<br>
<a href=\"https://www.4chan.org/pass\">Tap here to learn more.</a>
]]>
    "</string>
    <string name="apply_to_replies">Apply to replies</string>
    <string name="only_on_op">Only on OP</string>
    <string name="apply_to_saved">Apply to own posts</string>
    <string name="captcha_layout_v2_verify_button_text">Verify</string>
    <string name="captcha_layout_v2_use_old_captcha">Use old\ncaptcha</string>
    <string name="lorem_ipsum">
        The standard Lorem Ipsum passage, used since the 1500s
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
    </string>
    <string name="hsid_cookie_text">HSID</string>
    <string name="ssid_cookie_text">SSID</string>
    <string name="sid_cookie_text">SID</string>
    <string name="nid_cookie_text">NID</string>
    <string name="js_captcha_cookies_editor_format_hint">Do not prepend values with \"HSID=…\", \"SSID=…\" etc.</string>
</resources>