<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?backcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/js_captcha_cookies_editor_format_hint" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/js_captcha_cookies_editor_hsid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hsid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4"
                tools:text="@string/lorem_ipsum"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/js_captcha_cookies_editor_ssid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ssid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4"
                tools:text="@string/lorem_ipsum"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/js_captcha_cookies_editor_sid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4"
                tools:text="@string/lorem_ipsum"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/js_captcha_cookies_editor_nid_cookie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nid_cookie_text"
                android:importantForAutofill="no"
                android:maxLines="4"
                tools:text="@string/lorem_ipsum"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/js_captcha_cookies_editor_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/reset" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/js_captcha_cookies_editor_save_and_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>