<?xml version="1.0" encoding="utf-8"?><!--
Kuroba - *chan browser https://github.com/Adamantcheese/Kuroba/

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backcolor">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="8dp"
            android:paddingRight="4dp"
            android:paddingBottom="8dp"
            android:textColor="@color/md_red_500"
            android:textSize="16sp"
            android:visibility="gone" />

        <com.github.adamantcheese.chan.ui.view.CrossfadeView
            android:id="@+id/crossfade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/input_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/setting_pass_token"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword" />

                <EditText
                    android:id="@+id/input_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/setting_pass_pin"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword" />

            </LinearLayout>

            <TextView
                android:id="@+id/authenticated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting_pass_authenticated"
                android:textSize="20sp"
                android:visibility="gone" />

        </com.github.adamantcheese.chan.ui.view.CrossfadeView>

        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/bottom_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingRight="4dp"
            android:textSize="14sp"
            tools:text="@string/setting_pass_bottom_description" />

    </LinearLayout>

</ScrollView>
