<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/captcha_layout_v2_top_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backcolor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/captcha_layout_v2_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?backcolor"
        android:ellipsize="middle"
        android:gravity="center"
        android:padding="4dp"
        android:singleLine="true"
        android:text=""
        android:textSize="18sp"
        tools:text="Select all images with something" />

    <!--
        The layout_width and height here don't actually matter because they're programatically set for the orientation of the device
        Also the numColumns is set here only for the design view in the editor, as it is also programatically changed
     -->
    <GridView
        android:id="@+id/captcha_layout_v2_images_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:numColumns="3"
        app:layout_constraintEnd_toStartOf="@id/captcha_layout_v2_buttons"
        app:layout_constraintStart_toEndOf="@id/captcha_layout_v2_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/captcha_layout_v2_buttons"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="?backcolor"
        tools:layout_editor_absoluteY="40dp">

        <Button
            android:id="@+id/captcha_layout_v2_use_old_captcha_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/captcha_layout_v2_use_old_captcha"
            app:layout_constraintBottom_toBottomOf="@+id/captcha_layout_v2_verify_button"
            app:layout_constraintEnd_toStartOf="@+id/captcha_layout_v2_reload_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/captcha_layout_v2_verify_button" />

        <Button
            android:id="@+id/captcha_layout_v2_reload_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/action_reload"
            app:layout_constraintBottom_toBottomOf="@+id/captcha_layout_v2_verify_button"
            app:layout_constraintEnd_toStartOf="@+id/captcha_layout_v2_verify_button"
            app:layout_constraintStart_toEndOf="@+id/captcha_layout_v2_use_old_captcha_button"
            app:layout_constraintTop_toTopOf="@+id/captcha_layout_v2_verify_button" />

        <Button
            android:id="@+id/captcha_layout_v2_verify_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:enabled="false"
            android:text="@string/captcha_layout_v2_verify_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/captcha_layout_v2_reload_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>